--- a/ageone/ageone/index.html
+++ b/ageone/ageone/index.html
@@ -133,10 +133,10 @@
           expectations every time.
         </p>
         <div class="degrees">
-          <!-- <div>
+          <div>
             <h2>10+</h2>
             <p>Years of Experiences</p>
-          </div> -->
+          </div>
 
           <div>
             <h2>666+</h2>
