--- a/ageone/ageone/index.html
+++ b/ageone/ageone/index.html
@@ -135,7 +135,7 @@
         <div class="degrees">
           <div>
             <h2>10+</h2>
-            <p>Years of Experiences</p>
+            <p>Years of Experiencess</p>
           </div>
 
           <div>
