--- a/ageone/ageone/index.html
+++ b/ageone/ageone/index.html
@@ -132,7 +132,7 @@
           digital age. We take pride in our work and strive to exceed your
           expectations every time.
         </p>
-        <div class="degrees">
+        <div class="degreess">
           <div>
             <h2>10+</h2>
             <p>Years of Experiencess</p>
