--- a/ageone/ageone/index.html
+++ b/ageone/ageone/index.html
@@ -130,7 +130,7 @@
         <p class="we_are-p">
           We are passionate about helping businesses grow and succeed in the
           digital age. We take pride in our work and strive to exceed your
-          expectations every time.
+          expectations every timee.
         </p>
         <div class="degreess">
           <div>
